stylesheets/stylesheet.css
@font-face {
    font-family: 'MarioBros';
    src: url('../fonts/SuperPlumberBrothers.ttf'); /*URL to font*/
}

@font-face{
  font-family: 'emulogic';
  src: url('../fonts/emulogic.ttf');
}

html {
  background: url(../imgs/mariobros_beginning.png) no-repeat center center fixed;
  background-size: cover;
  height: 100%;
}

body{
  height: 100%;
  width: 100%
}

.title_box{
  background-color: brown;
  width: 50%;
  height: 40%;
  margin: auto;
  margin-top: 5%;

}

.title_box h1{
  text-align: center;
  font-family: MarioBros;
  color: white;
  font-size: 600%;
  padding-top: 10%;
  width: 95%;
  height: 95%;
}

nav{
 width: 30%;
 margin: auto;
}

nav ul{
  list-style-type: none;
}

nav li{
  padding: .5%;
}
nav a{
  text-decoration: none;
  color: white;
  font-size: 1.5em;
  font-family: emulogic;
}

li img{
  height: 7%;
  width: 7%;
  display: none;
}

